[project]
name = "rag-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "dotenv>=0.9.9",
    "langchain-text-splitters>=1.1.2",
    "langchain[openai]>=1.3.14",
    "numpy>=2.5.1",
    "requests>=2.34.2",
]
